--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 	<head>
+	<link rel="icon" href="icon.png" type="image/png">
+  	<title>VoxelCore</title>
 	<style type="text/css">
 	html, body {
     	overflow: hidden;
